<resources>
    <string name="app_name">Calculator</string>
    <string name="initialEditTextValue">0</string>
    <string name="clearBtnText">AC</string>
    <string name="changeSignBtnText">+/-</string>
    <string name="moduloBtnText">%</string>
    <string name="divisionBtnText">/</string>
    <string name="resultBtnText">=</string>
    <string name="decimalPointBtnText">.</string>
    <string name="zeroBtnText">0</string>
    <string name="subtractionBtnText">-</string>
    <string name="threeBtnText">3</string>
    <string name="twoBtnText">2</string>
    <string name="oneBtnText">1</string>
    <string name="additionBtnText">+</string>
    <string name="sixBtnText">6</string>
    <string name="fiveBtnText">5</string>
    <string name="fourBtnText">4</string>
    <string name="multiplicationBtnText">*</string>
    <string name="nineBtnText">9</string>
    <string name="eightBtnText">8</string>
    <string name="sevenBtnText">7</string>
</resources>
